[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Panel/panel-sinbotones.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Panel/boton-izq.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Panel/boton-izq-apretado.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Panel/boton-der.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Panel/boton-der-apretado.png" type="Texture" id=5]
[ext_resource path="res://Scripts/PanelCode/Letters1.gd" type="Script" id=6]
[ext_resource path="res://Fonts/digital-7.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/PanelCode/Letters2.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PanelCode/Number1.gd" type="Script" id=9]
[ext_resource path="res://Scripts/PanelCode/Number2.gd" type="Script" id=10]
[ext_resource path="res://Sprites/icon.png" type="Texture" id=11]
[ext_resource path="res://Scripts/PanelVisibl.gd" type="Script" id=12]
[ext_resource path="res://Scripts/PanelCode/Codigo.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 70
extra_spacing_bottom = 14
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 70
extra_spacing_bottom = 14
font_data = ExtResource( 7 )

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 903.519, 379.982 )
texture = ExtResource( 1 )

[node name="Codigo" type="Control" parent="."]
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lett1" type="Label" parent="Codigo"]
modulate = Color( 0.0784314, 0.45098, 0.129412, 1 )
margin_left = 840.164
margin_top = 154.337
margin_right = 928.164
margin_bottom = 234.337
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
valign = 1
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lett2" type="Label" parent="Codigo"]
modulate = Color( 0.0784314, 0.45098, 0.129412, 1 )
margin_left = 840.164
margin_top = 283.337
margin_right = 928.164
margin_bottom = 363.337
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
valign = 1
autowrap = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num1" type="Label" parent="Codigo"]
modulate = Color( 0.0823529, 0.396078, 0.0941176, 1 )
margin_left = 840.164
margin_top = 408.337
margin_right = 928.164
margin_bottom = 488.337
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num2" type="Label" parent="Codigo"]
modulate = Color( 0.0823529, 0.396078, 0.0941176, 1 )
margin_left = 840.164
margin_top = 533.337
margin_right = 928.164
margin_bottom = 613.337
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subir" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterUpOne" type="TextureButton" parent="Subir"]
margin_left = 952.164
margin_top = 158.337
margin_right = 1006.16
margin_bottom = 226.337
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterUpTwo" type="TextureButton" parent="Subir"]
margin_left = 952.164
margin_top = 290.337
margin_right = 1006.16
margin_bottom = 358.337
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberUpOne" type="TextureButton" parent="Subir"]
margin_left = 952.164
margin_top = 418.337
margin_right = 1006.16
margin_bottom = 486.337
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberUpTwo" type="TextureButton" parent="Subir"]
margin_left = 952.164
margin_top = 542.337
margin_right = 1006.16
margin_bottom = 610.337
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bajar" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterDownOne" type="TextureButton" parent="Bajar"]
margin_left = 762.164
margin_top = 158.337
margin_right = 816.164
margin_bottom = 226.337
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterDownTwo" type="TextureButton" parent="Bajar"]
margin_left = 762.164
margin_top = 290.337
margin_right = 816.164
margin_bottom = 358.337
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberDownOne" type="TextureButton" parent="Bajar"]
margin_left = 762.164
margin_top = 415.337
margin_right = 816.164
margin_bottom = 483.337
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberDownTwo" type="TextureButton" parent="Bajar"]
margin_left = 762.164
margin_top = 542.337
margin_right = 816.164
margin_bottom = 610.337
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 11.753
margin_top = 9.2142
margin_right = 75.753
margin_bottom = 73.2142
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Subir/LetterUpOne" to="Codigo/Lett1" method="_on_LetterUpOne_pressed"]
[connection signal="pressed" from="Subir/LetterUpTwo" to="Codigo/Lett2" method="_on_LetterUpTwo_pressed"]
[connection signal="pressed" from="Subir/NumberUpOne" to="Codigo/Num1" method="_on_NumberUpOne_pressed"]
[connection signal="pressed" from="Subir/NumberUpTwo" to="Codigo/Num2" method="_on_NumberUpTwo_pressed"]
[connection signal="pressed" from="Bajar/LetterDownOne" to="Codigo/Lett1" method="_on_LetterDownOne_pressed"]
[connection signal="pressed" from="Bajar/LetterDownTwo" to="Codigo/Lett2" method="_on_LetterDownTwo_pressed"]
[connection signal="pressed" from="Bajar/NumberDownOne" to="Codigo/Num1" method="_on_NumberDownOne_pressed"]
[connection signal="pressed" from="Bajar/NumberDownTwo" to="Codigo/Num2" method="_on_NumberDownTwo_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
